addign swagger documentation api
