# app/Http/Controllers/Controller.php
@@ -8,7 +8,12 @@ use Illuminate\Routing\Controller as BaseController;
 
 /**
  * @OA\Server(url="http://localhost:8000/api")
- * @OA\Info(title="Api Swaggar", version="0.0.1")
+ * @OA\Info(title="Api Swagger", version="0.0.1")
+ * @OA\SecurityScheme(
+ *      type="http",
+ *      scheme="bearer",
+ *      securityScheme="bearerAuth"
+ * )
  */
 class Controller extends BaseController
 {
